--- a/src/pages/Login.css
+++ b/src/pages/Login.css
@@ -128,3 +128,14 @@
         font-size: 1.5rem;
     }
 }
+
+/* Override Browser Autocomplete Styles */
+.login-field input:-webkit-autofill,
+.login-field input:-webkit-autofill:hover,
+.login-field input:-webkit-autofill:focus,
+.login-field input:-webkit-autofill:active {
+    -webkit-box-shadow: 0 0 0 30px var(--bg-primary) inset !important;
+    -webkit-text-fill-color: var(--text-primary) !important;
+    transition: background-color 5000s ease-in-out 0s;
+    caret-color: var(--text-primary);
+}
